--- a/index.html
+++ b/index.html
@@ -1,27 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot</title>
     <style>
-        #chat-box {
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+        }
+        #chat-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 90%;
+            height: 80%;
+            max-width: 1400px;
             border: 1px solid #ccc;
-            padding: 10px;
-            width: 300px;
-            height: 400px;
-            overflow-y: scroll;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        #chat-box {
+            flex: 1;
+            padding: 20px;
+            overflow-y: auto;
+            border-bottom: 1px solid #ccc;
         }
         .message {
-            margin: 5px 0;
+            margin: 10px 0;
+            display: flex;
         }
-        .user {
-            text-align: right;
+        .message.user {
+            justify-content: flex-end;
         }
-        .bot {
-            text-align: left;
+        .message.bot {
+            justify-content: flex-start;
+        }
+        .message-bubble {
+            max-width: 70%;
+            padding: 10px;
+            border-radius: 20px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+        }
+        .message.user .message-bubble {
+            background-color: #0084ff;
+            color: #fff;
+            border-bottom-right-radius: 0;
+        }
+        .message.bot .message-bubble {
+            background-color: #f1f0f0;
+            color: #000;
+            border-bottom-left-radius: 0;
+        }
+        #input-form {
+            display: flex;
+            padding: 10px;
+            border-top: 1px solid #ccc;
+            background-color: #f4f4f9;
+        }
+        #messageInput {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 20px;
+            outline: none;
+        }
+        #sendButton {
+            margin-left: 10px;
+            padding: 10px 20px;
+            background-color: #0084ff;
+            color: #fff;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            outline: none;
+        }
+        #sendButton:hover {
+            background-color: #006bbf;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
         async function sendMessage(event) {
             event.preventDefault();
@@ -45,18 +110,32 @@
             const chatBox = document.getElementById('chat-box');
             const messageElement = document.createElement('div');
             messageElement.classList.add('message', sender);
-            messageElement.textContent = message;
+            const bubbleElement = document.createElement('div');
+            bubbleElement.classList.add('message-bubble');
+            bubbleElement.innerHTML = message.replace(/\n/g, '<br>');
+            messageElement.appendChild(bubbleElement);
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
         }
     </script>
 </head>
 <body>
-    <h1>Chat with Bot</h1>
-    <div id="chat-box"></div>
-    <form onsubmit="sendMessage(event)">
-        <input type="text" id="messageInput" name="message" required>
-        <button type="submit">Send</button>
-    </form>
+    <h1>Chatbot</h1>
+    <div id="chat-container">
+        <div id="chat-box">
+            <div class="message bot">
+                <div class="message-bubble">
+                    I am a finance, real estate, and investment chatbot assistant based off Connie's Youtube.
+                    My responses may take up to 30 seconds.
+                    Please note that in the end I am still just an AI and my information could be outdated or incorrect.
+                    Double check important information.
+                </div>
+            </div>
+        </div>
+        <form id="input-form" onsubmit="sendMessage(event)">
+            <input type="text" id="messageInput" name="message" required>
+            <button type="submit" id="sendButton">Send</button>
+        </form>
+    </div>
 </body>
 </html>
